# orbitflare-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/orbitflare-sdk/: Cargo.toml
crates/orbitflare-sdk-proto/: Cargo.toml  README.md  build.rs
crates/orbitflare-sdk-proto/src/: lib.rs
crates/orbitflare-sdk/examples/: grpc_basic.rs  grpc_full.rs  jetstream_basic.rs  jetstream_full.rs  rpc_basic.rs  rpc_full.rs  ws_basic.rs  ws_full.rs
crates/orbitflare-sdk/src/: config.rs  credentials.rs  endpoint.rs  error.rs  grpc.rs  jetstream.rs  lib.rs  retry.rs  rpc.rs  ws.rs
crates/orbitflare-sdk/tests/: grpc.rs  helpers.rs  jetstream.rs  rpc.rs  websocket.rs
examples/: grpc_basic.rs  grpc_filters.rs  jetstream_basic.rs  jetstream_filters.rs  jetstream_v2_basic.rs  ws_basic.rs
examples/config/: grpc.yml  jetstream.yml
src/: config.rs  filters.rs  lib.rs  streaming.rs
src/grpc/: filters.rs  mod.rs
src/jetstream/: mod.rs  v1.rs  v2.rs
tests/: filters.rs  grpc.rs  jetstream.rs  jetstream_v2.rs
