[package]
name = "orbitflare-sdk-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Internal crate for orbitflare-sdk. Use orbitflare-sdk directly instead."
authors = ["OrbitFlare"]
license = "MIT"
repository = "https://github.com/orbitflare/orbitflare-sdk"
readme = "README.md"

[dependencies]
tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
