[package]
name = "orbitflare-sdk"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Rust SDK for OrbitFlare - RPC, gRPC (Yellowstone), JetStream, and WebSocket clients for Solana"
authors = ["OrbitFlare"]
license = "MIT"
repository = "https://github.com/orbitflare/orbitflare-sdk-rs"
homepage = "https://orbitflare.com"
keywords = ["solana", "grpc", "rpc", "orbitflare", "yellowstone"]
categories = ["api-bindings", "development-tools"]
readme = "../../README.md"

[features]
default = ["rpc"]
rpc = ["dep:reqwest", "dep:serde_json"]
ws = ["rpc", "dep:tokio-tungstenite", "dep:futures-util"]
grpc = ["dep:orbitflare-sdk-proto", "dep:tonic", "dep:tonic-prost", "dep:tokio-stream", "dep:serde_yml", "dep:shellexpand"]
jetstream = ["dep:orbitflare-sdk-proto", "dep:tonic", "dep:tonic-prost", "dep:tokio-stream", "dep:serde_yml", "dep:shellexpand"]
all = ["rpc", "ws", "grpc", "jetstream"]

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["rt", "time", "sync", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }

reqwest = { version = "0.13.2", features = ["json"], optional = true }
serde_json = { version = "1.0.149", optional = true }

tokio-tungstenite = { version = "0.29.0", features = ["native-tls"], optional = true }
futures-util = { version = "0.3.32", default-features = false, features = ["sink"], optional = true }

orbitflare-sdk-proto = { version = "0.1.0", path = "../orbitflare-sdk-proto", optional = true }
tonic = { version = "0.14.5", optional = true }
tonic-prost = { version = "0.14.5", optional = true }
tokio-stream = { version = "0.1.18", optional = true }
serde_yml = { version = "0.0.12", optional = true }
shellexpand = { version = "3.1.2", optional = true }

[dev-dependencies]
bs58 = "0.5.1"
tracing-subscriber = "0.3.23"
tokio = { version = "1.51.1", features = ["full"] }
wiremock = "0.6.5"
serde_json = "1.0.149"

[[example]]
name = "rpc_basic"
required-features = ["rpc"]

[[example]]
name = "rpc_full"
required-features = ["rpc"]

[[example]]
name = "grpc_basic"
required-features = ["grpc"]

[[example]]
name = "grpc_full"
required-features = ["grpc"]

[[example]]
name = "jetstream_basic"
required-features = ["jetstream"]

[[example]]
name = "jetstream_full"
required-features = ["jetstream"]

[[example]]
name = "ws_basic"
required-features = ["ws"]

[[example]]
name = "ws_full"
required-features = ["ws"]
